frontend/style.css
body {
  margin: 0;
  font-family: Arial, sans-serif;
  background: #0f172a;
  color: white;
}

header {
  display: flex;
  justify-content: space-between;
  padding: 20px 40px;
  background: #020617;
}

.btn {
  background: #3b82f6;
  padding: 10px 20px;
  color: white;
  text-decoration: none;
  border-radius: 6px;
}

.hero {
  text-align: center;
  padding: 100px 20px;
}

.hero h2 {
  font-size: 40px;
}

.features {
  display: flex;
  justify-content: center;
  gap: 20px;
  padding: 50px;
}

.card {
  background: #1e293b;
  padding: 20px;
  border-radius: 10px;
  width: 200px;
  text-align: center;
}

footer {
  text-align: center;
  padding: 20px;
  background: #020617;
}
.login-box {
  width: 300px;
  margin: 100px auto;
  background: #1e293b;
  padding: 30px;
  border-radius: 10px;
  text-align: center;
}

.login-box input {
  width: 90%;
  padding: 10px;
  margin: 10px;
  border: none;
  border-radius: 5px;
}

.login-box button {
  background: #3b82f6;
  padding: 10px;
  border: none;
  color: white;
  border-radius: 5px;
  width: 100%;
}
.dashboard {
  display: flex;
  justify-content: center;
  gap: 20px;
  padding: 40px;
}

.checker {
  text-align: center;
  margin-top: 40px;
}

.checker input {
  padding: 10px;
  width: 250px;
}

.checker button {
  padding: 10px;
  background: #3b82f6;
  border: none;
  color: white;
}
/* Layout */
.container {
  display: flex;
}

/* Sidebar */
.sidebar {
  width: 200px;
  height: 100vh;
  background: #020617;
  padding: 20px;
}

.sidebar h2 {
  color: #3b82f6;
}

.sidebar ul {
  list-style: none;
  padding: 0;
}

.sidebar li {
  padding: 10px;
  cursor: pointer;
  margin: 10px 0;
  background: #1e293b;
  border-radius: 5px;
}

.sidebar li:hover {
  background: #3b82f6;
}

/* Main */
.main {
  flex: 1;
  padding: 20px;
}

/* Navbar */
.navbar {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}

/* Cards */
.cards {
  display: flex;
  gap: 20px;
}

.card {
  flex: 1;
  background: #1e293b;
  padding: 20px;
  border-radius: 10px;
}

/* Checker */
.checker-box {
  margin-top: 40px;
  background: #1e293b;
  padding: 20px;
  border-radius: 10px;
}

.checker-box input {
  padding: 10px;
  width: 60%;
}

.checker-box button {
  padding: 10px;
  background: #3b82f6;
  border: none;
  color: white;
}
/* Charts */
.charts {
  display: flex;
  gap: 20px;
  margin-top: 30px;
}

.chart-box {
  flex: 1;
  background: #1e293b;
  padding: 20px;
  border-radius: 10px;
}
.about {
  padding: 40px;
  max-width: 800px;
  margin: auto;
}

.about h2 {
  margin-top: 20px;
  color: #3b82f6;
}

